# sam3.cpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  PLAN_100X_SPEEDUP.md  PLAN_SUPPORT_SAM2.md  README.md  convert_sam2_to_ggml.py  convert_sam3_to_ggml.py  imgui.ini  pyproject.toml  sam3.cpp  sam3.h
.github/workflows/: ci.yml  release.yml
examples/: CMakeLists.txt  benchmark.cpp  main_image.cpp  main_video.cpp  quantize.cpp
tests/: CMakeLists.txt  analyze_divergence.py  analyze_f16_divergence.py  check_f16_weight_error.py  check_preprocessing.py  check_rounding.py  compare_actual_resize.py  compare_cpp_dump_vs_finterp.py  compare_ddec_tensors.py  compare_f32_vs_f16.py  compare_mask_decoder.py  compare_preprocessed_float.py  compare_preprocessing.py  compare_resize.py  compare_sam2_video.py  compare_tensors.py  dump_cpp_preprocessed.py  dump_ddec_from_package.py  dump_fenc_from_package.py  dump_geom_encoder_reference.py  dump_phase3_reference.py  dump_phase5_reference.py  dump_reference.py  dump_sam2_pvs_reference.py  dump_sam2_reference.py  dump_vit_reference.py  test_debug_encoder.cpp  test_debug_fenc.cpp  test_e2e_pcs.cpp  test_e2e_pvs.cpp  test_full_pipeline.py  test_geom_enc.cpp  test_jpeg_decode.cpp  test_llama_pcs.cpp  test_mem_enc.cpp  test_metal_conv_dw.cpp  test_metal_conv_transpose_2d.cpp  test_metal_conv_transpose_2d_stress.cpp  test_metal_encoder_checkpoints.cpp  test_metal_flash_attn_ext_block15_compare.cpp  (+37 more)
