[project]
name = "sam3-cpp-tests"
version = "0.1.0"
description = "Python test utilities for sam3.cpp"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "iopath>=0.1.10",
    "einops>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
